// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "decimalSeparator": undefined,
      "groupSeparator": undefined,
      "id": "default",
      "precision": undefined,
      "prefix": "",
      "suffix": "",
      "title": undefined,
      "value": "",
      "valueStyle": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.decimalSeparator: ',' - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "decimalSeparator": ",",
      "groupSeparator": undefined,
      "id": "properties.decimalSeparator: ','",
      "precision": undefined,
      "prefix": "",
      "suffix": "",
      "title": undefined,
      "value": 3.45,
      "valueStyle": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.groupSeparator: ',' - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "decimalSeparator": ",",
      "groupSeparator": ".",
      "id": "properties.groupSeparator: ','",
      "precision": undefined,
      "prefix": "",
      "suffix": "",
      "title": undefined,
      "value": 3565542.45,
      "valueStyle": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.precision: 2 - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "decimalSeparator": undefined,
      "groupSeparator": undefined,
      "id": "properties.precision: 2",
      "precision": 2,
      "prefix": "",
      "suffix": "",
      "title": undefined,
      "value": 3.456,
      "valueStyle": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.prefix: R - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "decimalSeparator": undefined,
      "groupSeparator": undefined,
      "id": "properties.prefix: R",
      "precision": undefined,
      "prefix": "R",
      "suffix": "",
      "title": undefined,
      "value": 3.45,
      "valueStyle": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.prefixIcon: AccountBookFilled - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "decimalSeparator": undefined,
      "groupSeparator": undefined,
      "id": "properties.prefixIcon: AccountBookFilled",
      "precision": undefined,
      "prefix": <IconBlock
        blockId="properties.prefixIcon: AccountBookFilled_prefixIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties="AccountBookFilled"
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "suffix": "",
      "title": undefined,
      "value": 3.45,
      "valueStyle": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.suffix: Rand - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "decimalSeparator": undefined,
      "groupSeparator": undefined,
      "id": "properties.suffix: Rand",
      "precision": undefined,
      "prefix": "",
      "suffix": "Rand",
      "title": undefined,
      "value": 3.45,
      "valueStyle": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.suffixIcon: AccountBookFilled - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "decimalSeparator": undefined,
      "groupSeparator": undefined,
      "id": "properties.suffixIcon: AccountBookFilled",
      "precision": undefined,
      "prefix": "",
      "suffix": <IconBlock
        blockId="properties.suffixIcon: AccountBookFilled_suffixIcon"
        content={Object {}}
        events={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "makeCssClass": [Function],
            "registerEvent": [Function],
            "registerMethod": [Function],
            "triggerEvent": [Function],
          }
        }
        properties="AccountBookFilled"
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "title": undefined,
      "value": 3.45,
      "valueStyle": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.title - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "decimalSeparator": undefined,
      "groupSeparator": undefined,
      "id": "properties.title",
      "precision": undefined,
      "prefix": "",
      "suffix": "",
      "title": "Statistic title",
      "value": "",
      "valueStyle": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.value: '3.45' as string - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "decimalSeparator": undefined,
      "groupSeparator": undefined,
      "id": "properties.value: '3.45' as string",
      "precision": undefined,
      "prefix": "",
      "suffix": "",
      "title": undefined,
      "value": "3.45",
      "valueStyle": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.value: 3.45 as number - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "className": "{}",
      "decimalSeparator": undefined,
      "groupSeparator": undefined,
      "id": "properties.value: 3.45 as number",
      "precision": undefined,
      "prefix": "",
      "suffix": "",
      "title": undefined,
      "value": 3.45,
      "valueStyle": undefined,
    },
    Object {},
  ],
]
`;
